Adding the button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </script>
 </head>
 <body>
-<h1>Autenticação</h1>
+<h1>Autenticação!</h1>
+<button id="btnLogin">Fazer login</button>
 <script
   src="https://code.jquery.com/jquery-3.2.1.js"
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
